mini-project/pod_subnet_seperation/route_table_association.tf

resource "aws_route_table_association" "test_route_association_pub_sub1" {
    route_table_id = aws_route_table.test_route_table_pubsub1.id
    subnet_id = aws_subnet.test-public-subnet1.id
}

resource "aws_route_table_association" "test_route_association_pub_sub3" {
    route_table_id = aws_route_table.test_route_table_pubsub3.id
    subnet_id = aws_subnet.test-public-subnet3.id
}

resource "aws_route_table_association" "test_route_association_pub_sub-pod1" {
    route_table_id = aws_route_table.test_route_table_pubsub-pod1.id
    subnet_id = aws_subnet.test-public-subnetpod-1.id
}

resource "aws_route_table_association" "test_route_association_pub_sub-pod3" {
    route_table_id = aws_route_table.test_route_table_pubsub-pod3.id
    subnet_id = aws_subnet.test-public-subnetpod-3.id
}
